--- a/web/app/themes/inside/views/parts/header.twig
+++ b/web/app/themes/inside/views/parts/header.twig
@@ -1,6 +1,6 @@
 <header class="site-header">
   <div class="container">
-    <h1>Inside eikon</h1>
+    <h1>header: Inside eikon</h1>
     <hr>
     {% include 'parts/menu.twig' %}
 
