--- a/web/app/themes/inside/views/base.twig
+++ b/web/app/themes/inside/views/base.twig
@@ -7,6 +7,8 @@
 {% endblock %}
 
 	<body class="{{body_class}}" data-template="base.twig">
+  		<div class="icons-container">{{ source('/dist/icons.svg') }}</div>
+
 		<a class="skip-link screen-reader-text" href="#content">{{ _e( 'Skip to content') }}</a>
 			{% block header %}
 				{% include 'parts/header.twig' %}
