Adds custom fields and template for page

--- a/web/app/themes/inside/assets/scss/main.scss
+++ b/web/app/themes/inside/assets/scss/main.scss
@@ -4,6 +4,7 @@
 
 @import "components/button";
 @import "components/footer";
-@import "components/gallery";
 @import "components/header";
 @import "components/icons";
+@import "components/project-teaser";
+@import "components/slider";
