--- a/web/app/themes/inside/views/base.twig
+++ b/web/app/themes/inside/views/base.twig
@@ -29,5 +29,6 @@
 			</footer>
 			{{ function('wp_footer') }}
 		{% endblock %}
+    <script src="{{ site.theme.path }}/dist/main.js"></script>
 	</body>
 </html>
