--- a/web/app/themes/inside/assets/scss/components/slider.scss
+++ b/web/app/themes/inside/assets/scss/components/slider.scss
@@ -1,3 +1,27 @@
 $themeColor: $black !default;
 
 @import "~swiper/swiper.scss";
+
+.swiper {
+  position: relative;
+
+  .swiper-prev {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: auto;
+    background: red;
+    z-index: 1000;
+    cursor: pointer;
+  }
+
+  .swiper-next {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    width: auto;
+    background: red;
+    z-index: 1000;
+    cursor: pointer;
+  }
+}
