maj title-banner

--- a/web/app/themes/inside/views/parts/footer.twig
+++ b/web/app/themes/inside/views/parts/footer.twig
@@ -7,12 +7,12 @@
             <div class="d-flex justify-content-center align-items-center footer_cta_lg">
               <div class="col">
                 <div class="d-flex justify-content-center footer_logos">
-                  <img src="app/themes/inside/assets/img/logo_eikon.svg" alt="logo d'eikon.">
+                  <img src="{{ theme.link }}/dist/img/logo_eikon.svg" alt="logo d'eikon.">
                 </div>
               </div>
               <div class="col">
                 <div class="d-flex justify-content-center footer_logos">
-                  <img src="app/themes/inside/assets/img/logo_etatfr.svg" alt="logo de l'Etat de Fribourg.">
+                  <img src="{{ theme.link }}/dist/img/logo_etatfr.svg" alt="logo de l'Etat de Fribourg.">
                 </div>
               </div>
           </div>
@@ -29,13 +29,13 @@
             <div class="footer_cta_sn">
               <div class="row">
                 <div class="col">
-                  <a href="https://fr-fr.facebook.com/eikon.fribourg/" target="_blank"><img src="app/themes/inside/assets/img/cta_facebook.svg" alt="logo de Facebook."></a>
+                  <a href="https://fr-fr.facebook.com/eikon.fribourg/" target="_blank"><img src="{{ theme.link }}/dist/img/cta_facebook.svg" alt="logo de Facebook."></a>
                 </div>
                 <div class="col">
-                  <a href="https://www.instagram.com/eikon.fribourg/?hl=fr" target="_blank"><img src="app/themes/inside/assets/img/cta_instagram.svg" alt="logo d'Instagram."></a>
+                  <a href="https://www.instagram.com/eikon.fribourg/?hl=fr" target="_blank"><img src="{{ theme.link }}/dist/img/cta_instagram.svg" alt="logo d'Instagram."></a>
                 </div>
                 <div class="col">
-                  <a href="https://ch.linkedin.com/company/eikonschool" target="_blank"><img src="app/themes/inside/assets/img/cta_linkedin.svg" alt="logo de Linkedin."></a>
+                  <a href="https://ch.linkedin.com/company/eikonschool" target="_blank"><img src="{{ theme.link }}/dist/img/cta_linkedin.svg" alt="logo de Linkedin."></a>
                 </div>
               </div>
             </div>
