--- a/web/app/themes/inside/views/parts/title-banner.twig
+++ b/web/app/themes/inside/views/parts/title-banner.twig
@@ -1,1 +1,31 @@
-<h2>Title banner: {{ title }}</h2>
+<div class="container-fluid tb_bloc">
+    <div class="row">
+        <div class="col">
+            <h2 class="tb_title">{{ title }}</h2>
+        </div>
+        <div class="col">↓</div>
+        <div class="col">
+            <h2 class="tb_title">{{ title }}</h2>
+        </div>
+        <div class="col">↓</div>
+        <div class="col">
+            <h2 class="tb_title">{{ title }}</h2>
+        </div>
+        <div class="col">↓</div>
+        <div class="col">
+            <h2 class="tb_title">{{ title }}</h2>
+        </div>
+        <div class="col">↓</div>
+        <div class="col">
+            <h2 class="tb_title">{{ title }}</h2>
+        </div>
+        <div class="col">↓</div>
+        <div class="col">
+            <h2 class="tb_title">{{ title }}</h2>
+        </div>
+        <div class="col">↓</div>
+        <div class="col">
+            <h2 class="tb_title">{{ title }}</h2>
+        </div>
+    </div>
+</div>
