--- a/web/app/themes/inside/assets/scss/main.scss
+++ b/web/app/themes/inside/assets/scss/main.scss
@@ -7,5 +7,6 @@
 @import "components/header";
 @import "components/icons";
 @import "components/title-banner";
+@import "components/masonry";
 @import "components/project-teaser";
 @import "components/slider";
