--- a/web/app/themes/inside/views/page.twig
+++ b/web/app/themes/inside/views/page.twig
@@ -24,11 +24,14 @@
       </div>
     {% endif %}
 
+
+
     {% if projects %}
       {% include 'parts/title-banner.twig' with { title: "Travaux" } %}
-      <div class="row">
+      <div class="grid">
+        <div class="grid-sizer"></div>
         {% for project in projects %}
-          <div class="col-4">
+          <div class="grid-item">
             <a class="project-teaser" href="{{ project.link }}">
               <img src="{{ project.thumbnail.src("medium") }}" alt="{{ project.thumbnail.alt }}">
               <div class="project-data">
