ajust title-banner (note : voir la version mobile)

--- a/web/app/themes/inside/views/sections/section-livefeed.twig
+++ b/web/app/themes/inside/views/sections/section-livefeed.twig
@@ -1,4 +1,4 @@
-{% include 'parts/title-banner.twig' with { title: "le titre" } %}
+{% include 'parts/title-banner.twig' with { title: "live" } %}
 <div class="container">
   <h2>section: livefeed</h2>
 </div>
