--- a/web/app/themes/inside/views/sections/section-navigationhub.twig
+++ b/web/app/themes/inside/views/sections/section-navigationhub.twig
@@ -1,4 +1,4 @@
-{% include 'parts/title-banner.twig' with { title: "le deuxième titre" } %}
+{% include 'parts/title-banner.twig' with { title: "Formations" } %}
 <div class="container">
   <h2>section: hub</h2>
 </div>
