--- a/web/app/themes/inside/assets/scss/components/title-banner.scss
+++ b/web/app/themes/inside/assets/scss/components/title-banner.scss
@@ -8,6 +8,6 @@
 .tb_bloc {
     border-top: 1px solid black;
     border-bottom: 1px solid black;
-    padding: 15px;
+    padding: 15px 30px;
     text-align: center;
 }
