--- a/web/app/themes/inside/views/sections/section-livefeed.twig
+++ b/web/app/themes/inside/views/sections/section-livefeed.twig
@@ -1,4 +1,17 @@
 {% include 'parts/title-banner.twig' with { title: "live" } %}
 <div class="container">
-  <h2>section: livefeed</h2>
+  <div class="row schedule">
+    <div class="col">Année préparatoire →  14h</div>
+    <div class="col">Interactive Media Designer →  15h</div>
+    <div class="col">Maturité Post-CFC MP2 →  16h</div>
+  </div>
+  <div class="ratio ratio-16x9">
+    <iframe src="https://player.vimeo.com/video/369521302?h=64aa6feb2c" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+  </div>
+  <div class="input-group mb-3">
+    <input type="text" class="form-control live_questions_input" placeholder="Ecrivez votre question..." aria-label="Ecrivez votre question..." aria-describedby="button-addon2">
+  </div>
+  <div class="d-flex justify-content-center">
+    <button class="btn btn-outline-secondary live_btn" type="button" id="button-addon2">Envoyer</button>
+  </div>
 </div>
