debut navhub (quelques bugs d'assimilation de css jsp pourquoi)

--- a/web/app/themes/inside/views/sections/section-navigationhub.twig
+++ b/web/app/themes/inside/views/sections/section-navigationhub.twig
@@ -1,4 +1,18 @@
 {% include 'parts/title-banner.twig' with { title: "Formations" } %}
-<div class="container">
-  <h2>section: hub</h2>
+<div class="d-flex justify-content-center align-items-center">
+  <div class="nhub_container">
+    <div class="row">
+      <div class="col">
+        <button type="button" class="jpo_btn">Click Me!</button>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        bleh
+      </div>
+      <div class="col">
+        bleh
+      </div>
+    </div>
+  </div>
 </div>
