--- a/web/app/themes/inside/assets/scss/components/button.scss
+++ b/web/app/themes/inside/assets/scss/components/button.scss
@@ -1,3 +1,12 @@
 .btn {
   display: inline-block;
 }
+
+.jpo_btn {
+  padding: 15px;
+  margin: 10px;
+  border: 1px solid black;
+  border-radius: 20px;
+  background: white;
+  text-transform: uppercase;
+}
