css peine donc maj contenu html

--- a/web/app/themes/inside/views/sections/section-landing.twig
+++ b/web/app/themes/inside/views/sections/section-landing.twig
@@ -1,12 +1,11 @@
 <div class="container">
 	<div class="row">
-		<div class="col-6">
-			<h2>Section
-			</h2>
+		<div class="col">
+			<h1 class="homepagetitle">Bienvenue à <u>Inside eikon</u> !</h1>
 		</div>
-		<div class="col-6">
-			<h2>
-				landing</h2>
-		</div>
+		<p>
+			Texte introductif du site.
+		</p>
+		<button type="button" class="jpo_btn">Vous êtes venus pour le live ? C'est par ici !  →</button>
 	</div>
 </div>
