--- a/web/app/themes/inside/views/parts/header.twig
+++ b/web/app/themes/inside/views/parts/header.twig
@@ -1,8 +1,7 @@
 <header class="site-header">
   <div class="container">
-    <h1>header: Inside eikon 	{% include 'components/icon.twig' with { icon_name: 'arrow_left', icon_class: 'mx-auto' } %}</h1>
     <hr>
     {% include 'parts/menu.twig' %}
-
+    {% include 'components/icon.twig' with { icon_name: 'arrow_left', icon_class: 'mx-auto' } %}
   </div>
 </header>
