maj boutons et structure

--- a/web/app/themes/inside/views/sections/section-landing.twig
+++ b/web/app/themes/inside/views/sections/section-landing.twig
@@ -6,6 +6,9 @@
 		<p>
 			Texte introductif du site.
 		</p>
-		<button type="button" class="jpo_btn">Vous êtes venus pour le live ? C'est par ici !  →</button>
+		<div class="col-6"></div>
+		<div class="col-6 d-flex justify-content-end">
+			<button type="button" class="jpo_btn"><a href="#" target="__blank">Vous êtes venus pour le live ? C'est par ici !  →</a></button>
+		</div>
 	</div>
 </div>
