--- a/web/app/themes/inside/views/sections/section-navigationhub.twig
+++ b/web/app/themes/inside/views/sections/section-navigationhub.twig
@@ -1,17 +1,17 @@
 {% include 'parts/title-banner.twig' with { title: "Formations" } %}
-<div class="d-flex justify-content-center align-items-center">
-  <div class="nhub_container">
+<div class="nhub_container">
+  <div class="d-flex justify-content-center align-items-center">
     <div class="row">
-      <div class="col">
-        <button type="button" class="jpo_btn">Click Me!</button>
+      <div class="d-flex justify-content-center align-items-center">
+        <button type="button" class="jpo_btn"><a href="#" target="_blank">Interactive Media Designer</a></button>
       </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        bleh
-      </div>
-      <div class="col">
-        bleh
+      <div class="d-flex justify-content-center align-items-center">
+        <div class="col-6 d-flex justify-content-end align-items-center">
+          <button type="button" class="jpo_btn"><a href="#" target="_blank">Année préparatoire</a></button>
+        </div>
+        <div class="col-6 d-flex justify-content-start align-items-center">
+          <button type="button" class="jpo_btn"><a href="#" target="_blank">Maturité professionnelle artistique</a></button>
+        </div>
       </div>
     </div>
   </div>
