--- a/web/app/themes/inside/assets/scss/components/button.scss
+++ b/web/app/themes/inside/assets/scss/components/button.scss
@@ -3,10 +3,16 @@
 }
 
 .jpo_btn {
-  padding: 15px;
+  padding: 10px 20px;
   margin: 10px;
   border: 1px solid black;
   border-radius: 20px;
   background: white;
   text-transform: uppercase;
+}
+
+.jpo_btn a {
+  color: black;
+  text-decoration: none;
+  font-size: 18px;
 }
