--- a/web/app/themes/inside/assets/scss/components/navhub.scss
+++ b/web/app/themes/inside/assets/scss/components/navhub.scss
@@ -1,6 +1,10 @@
 .nhub_container {
     width: 100%;
     height: 700px;
-    background-image: url(../../img/backgrounds/bgnavhub.png);
+    // background-image: url(../../img/backgrounds/bgnavhub.png);
+    background: red;
     background-size: cover;
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
 }
