début travail vlog (tentative changement taille)

--- a/web/app/themes/inside/views/sections/section-vlog.twig
+++ b/web/app/themes/inside/views/sections/section-vlog.twig
@@ -1,3 +1,7 @@
+
+
 <div class="container">
-  <h2>section: vlog</h2>
+  <div class="ratio ratio-16x9 vlog">
+  <iframe src="https://player.vimeo.com/video/369521302?h=64aa6feb2c" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+</div>
 </div>
