maj buttons+structure Inscriptions

--- a/web/app/themes/inside/views/sections/section-vlog.twig
+++ b/web/app/themes/inside/views/sections/section-vlog.twig
@@ -1,7 +1,12 @@
-
-
 <div class="container">
-  <div class="ratio ratio-16x9 vlog">
-  <iframe src="https://player.vimeo.com/video/369521302?h=64aa6feb2c" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-</div>
+  <div class="position-relative">
+    <div class="">
+      <img src="">
+    </div>
+    <div class="">
+      <div class="ratio ratio-16x9 vlog">
+        <iframe src="https://player.vimeo.com/video/369521302?h=64aa6feb2c" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+      </div>
+    </div>
+  </div>
 </div>
