--- a/web/app/themes/inside/views/sections/section-inscription.twig
+++ b/web/app/themes/inside/views/sections/section-inscription.twig
@@ -1,4 +1,10 @@
 {% include 'parts/title-banner.twig' with { title: "inscription" } %}
-<div class="container">
-  <h2>section: inscription</h2>
+<div class="container d-flex justify-content-center align-items-center">
+  <div class="cta_bloc">
+    <p>Les inscriptions sont ouvertes à partir du <u>20.11.2021</u> jusqu'au vendredi <u>14.01.2022</u></p>
+    <div class="d-flex justify-content-center align-items-center">
+      <button type="button" class="jpo_btn"><a href="#" target="__blank">Inscriptions</a></button>
+      <button type="button" class="jpo_btn"><a href="#" target="__blank">Brochure d'informations</a></button>
+    </div>
+  </div>
 </div>
