--- a/web/app/themes/inside/views/sections/section-livefeed.twig
+++ b/web/app/themes/inside/views/sections/section-livefeed.twig
@@ -12,6 +12,6 @@
     <input type="text" class="form-control live_questions_input" placeholder="Ecrivez votre question..." aria-label="Ecrivez votre question..." aria-describedby="button-addon2">
   </div>
   <div class="d-flex justify-content-center">
-    <button class="btn btn-outline-secondary jpo_btn" type="button" id="button-addon2">Envoyer</button>
+    <button type="button" class="jpo_btn"><a href="#" target="__blank">Envoyer  →</a></button>
   </div>
 </div>
