maj contenu html bigtitle

--- a/web/app/themes/inside/views/sections/section-bigtitle.twig
+++ b/web/app/themes/inside/views/sections/section-bigtitle.twig
@@ -1,3 +1,4 @@
-<div class="container">
-  <h2>Section: bigtitle</h2>
+<div class="containerfull">
+  <p class="bigtitle">Inside eikon →</p>
+  <p class="bigtitle">École professionnelle</p>
 </div>
