--- a/web/app/themes/inside/assets/scss/components/navhub.scss
+++ b/web/app/themes/inside/assets/scss/components/navhub.scss
@@ -2,7 +2,7 @@
     width: 100%;
     height: 700px;
     // background-image: url(../../img/backgrounds/bgnavhub.png);
-    background: red;
+    background: green;
     background-size: cover;
     display: flex;
     justify-content: center;
