--- a/web/app/themes/inside/assets/scss/components/button.scss
+++ b/web/app/themes/inside/assets/scss/components/button.scss
@@ -5,6 +5,11 @@
   display: inline-block;
   background: white;
 
+  &.badge-dark {
+    color: white;
+    background: black;
+  }
+
   &.badge-lg {
     font-size: 2rem;
     border-width: 4px;
