--- a/web/app/themes/inside/assets/scss/components/inscriptions.scss
+++ b/web/app/themes/inside/assets/scss/components/inscriptions.scss
@@ -1,3 +1,10 @@
 .cta_bloc {
-    background: blue;
+    background-image: url(../img/backgrounds/rectangle_downright_midfull.png);
+    background-size: cover;
+    margin: 70px;
+    padding: 250px 40px 50px 100px;
+    width: 1000px;
+    height: 557px;
+    text-align: center;
+    font-size: 22px;
 }
