--- a/web/app/themes/inside/views/parts/title-banner.twig
+++ b/web/app/themes/inside/views/parts/title-banner.twig
@@ -19,12 +19,12 @@
         <div class="col">
             <h2 class="tb_title">{{ title }}</h2>
         </div>
-        <div class="col">↓</div>
-        <div class="col">
+        <div class="col d-none d-md-block">↓</div>
+        <div class="col d-none d-md-block">
             <h2 class="tb_title">{{ title }}</h2>
         </div>
-        <div class="col">↓</div>
-        <div class="col">
+        <div class="col d-none d-xl-block">↓</div>
+        <div class="col d-none d-xl-block">
             <h2 class="tb_title">{{ title }}</h2>
         </div>
     </div>
