--- a/web/app/themes/inside/views/sections/section-landing.twig
+++ b/web/app/themes/inside/views/sections/section-landing.twig
@@ -1,10 +1,11 @@
 <div class="container">
 	<div class="row">
 		<div class="col">
-			<h1 class="homepagetitle">Bienvenue à <u>Inside eikon</u> !</h1>
+			<h1 class="homepagetitle">Bienvenue à <u>Inside.eikon</u> !</h1>
 		</div>
-		<p>
-			Texte introductif du site.
+		<p class="landing">
+			Cette année, nous avons décidé de changer notre conception des journées portes ouvertes d'eikon, c'est pourquoi nous les effectuons sur ce site. 
+			<br>Vous trouverez ici toutes les informations utiles sur chacunes de nos formations.
 		</p>
 		<div class="col-6"></div>
 		<div class="col-6 d-flex justify-content-end">
