--- a/web/app/themes/inside/views/sections/section-navigationhub.twig
+++ b/web/app/themes/inside/views/sections/section-navigationhub.twig
@@ -1,18 +1,8 @@
 {% include 'parts/title-banner.twig' with { title: "Formations" } %}
 <div class="nhub_container">
-  <div class="d-flex justify-content-center align-items-center">
-    <div class="row">
-      <div class="d-flex justify-content-center align-items-center">
-        <button type="button" class="jpo_btn"><a href="#" target="_blank">Interactive Media Designer</a></button>
-      </div>
-      <div class="d-flex justify-content-center align-items-center">
-        <div class="col-6 d-flex justify-content-end align-items-center">
-          <button type="button" class="jpo_btn"><a href="#" target="_blank">Année préparatoire</a></button>
-        </div>
-        <div class="col-6 d-flex justify-content-start align-items-center">
-          <button type="button" class="jpo_btn"><a href="#" target="_blank">Maturité professionnelle artistique</a></button>
-        </div>
-      </div>
-    </div>
+    <div class="d-flex flex-column justify-content-center align-items-center">
+      <button type="button" class="jpo_btn"><a href="#" target="_blank">Année préparatoire</a></button>
+      <button type="button" class="jpo_btn"><a href="#" target="_blank">Interactive Media Designer</a></button>
+      <button type="button" class="jpo_btn"><a href="#" target="_blank">Maturité professionnelle artistique</a></button>
   </div>
 </div>
