--- a/web/app/themes/inside/views/sections/section-vlog.twig
+++ b/web/app/themes/inside/views/sections/section-vlog.twig
@@ -1,11 +1,13 @@
-<div class="container">
-  <div class="position-relative">
-    <div class="">
-      <img src="">
-    </div>
-    <div class="">
-      <div class="ratio ratio-16x9 vlog">
-        <iframe src="https://player.vimeo.com/video/369521302?h=64aa6feb2c" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+<div class="container vlog">
+  <div class="d-flex justify-content-center align-items-center">
+    <div class="position-relative vlog">
+      <div class="position-absolute vlog_block">
+        <img src="{{ theme.link }}/dist/img/backgrounds/rectangle_upleft_empty.png">
+      </div>
+      <div class="position-absolute vlog">
+        <div class="ratio ratio-16x9 vlog">
+          <iframe src="https://player.vimeo.com/video/369521302?h=64aa6feb2c" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+        </div>
       </div>
     </div>
   </div>
