--- a/web/app/themes/inside/assets/scss/components/header.scss
+++ b/web/app/themes/inside/assets/scss/components/header.scss
@@ -1,8 +1,33 @@
 .site-header {
-  margin: ($spacer * 6) 0;
+  margin: 20px 0;
   font-size: 1.125rem;
+}
+
+.header_nav {
+  padding: 0 60px;
+}
+
+.header_nav li {
+  list-style: none;
+}
+
+.header_nav li a,
+.header_nav a {
+  color: black;
+  text-decoration: none;
 }
 
 .homepagetitle {
   text-transform: uppercase;
+  font-size: 100px;
+  line-height: 160px;
+}
+
+.landing {
+  margin: 30px;
+}
+
+header hr {
+  border-color: black;
+  opacity: 1;
 }
