--- a/web/app/themes/inside/assets/scss/components/videos.scss
+++ b/web/app/themes/inside/assets/scss/components/videos.scss
@@ -32,6 +32,28 @@
     margin: 0;
 }
 
+.container.vlog {
+    height: 550px;
+    width: 900px;
+    margin-top: 80px;
+}
+
+.position-relative.vlog {
+    height: 550px;
+    width: 900px; 
+}
+
 .ratio.ratio-16x9.vlog {
-    width: 744px;
+    width: 748px;
+    border: 4px solid black;
+    margin: 0;
+}
+
+.position-absolute.vlog {
+    top: -16px;
+    left: 4.4px;
+}
+
+.vlog_block img {
+    width: 802px;
 }
