--- a/web/app/themes/inside/assets/scss/components/header.scss
+++ b/web/app/themes/inside/assets/scss/components/header.scss
@@ -17,14 +17,19 @@
   text-decoration: none;
 }
 
+.container.landing {
+  margin: 0 auto 70px auto;
+}
+
 .homepagetitle {
+  margin-top: 50px;
   text-transform: uppercase;
   font-size: 100px;
   line-height: 160px;
 }
 
 .landing {
-  margin: 30px;
+  margin: 30px 0;
 }
 
 header hr {
