--- a/web/app/themes/inside/assets/scss/components/videos.scss
+++ b/web/app/themes/inside/assets/scss/components/videos.scss
@@ -11,6 +11,10 @@
     border-radius: 20px;
 }
 
+.live_input {
+    margin: 50px;
+}
+
 .form-control:focus {
     border-color: black;
     box-shadow: 0 0 0 0.25rem rgb(0 0 0 / 25%);
