--- a/web/app/themes/inside/views/parts/title-banner.twig
+++ b/web/app/themes/inside/views/parts/title-banner.twig
@@ -7,20 +7,20 @@
         <div class="col">
             <h2 class="tb_title">{{ title }}</h2>
         </div>
-        <div class="col">↓</div>
-        <div class="col">
-            <h2 class="tb_title">{{ title }}</h2>
-        </div>
-        <div class="col">↓</div>
-        <div class="col">
-            <h2 class="tb_title">{{ title }}</h2>
-        </div>
-        <div class="col">↓</div>
-        <div class="col">
+        <div class="col d-none d-sm-block">↓</div>
+        <div class="col d-none d-sm-block">
             <h2 class="tb_title">{{ title }}</h2>
         </div>
         <div class="col d-none d-md-block">↓</div>
         <div class="col d-none d-md-block">
+            <h2 class="tb_title">{{ title }}</h2>
+        </div>
+        <div class="col d-none d-md-block">↓</div>
+        <div class="col d-none d-md-block">
+            <h2 class="tb_title">{{ title }}</h2>
+        </div>
+        <div class="col d-none d-lg-block">↓</div>
+        <div class="col d-none d-lg-block">
             <h2 class="tb_title">{{ title }}</h2>
         </div>
         <div class="col d-none d-xl-block">↓</div>
