--- a/web/app/themes/inside/views/sections/section-landing.twig
+++ b/web/app/themes/inside/views/sections/section-landing.twig
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container landing">
 	<div class="row">
 		<div class="col">
 			<h1 class="homepagetitle">Bienvenue à <u>Inside.eikon</u> !</h1>
