--- a/web/app/themes/inside/views/sections/section-livefeed.twig
+++ b/web/app/themes/inside/views/sections/section-livefeed.twig
@@ -8,10 +8,12 @@
   <div class="ratio ratio-16x9">
     <iframe src="https://player.vimeo.com/video/369521302?h=64aa6feb2c" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
   </div>
-  <div class="input-group mb-3">
-    <input type="text" class="form-control live_questions_input" placeholder="Ecrivez votre question..." aria-label="Ecrivez votre question..." aria-describedby="button-addon2">
-  </div>
-  <div class="d-flex justify-content-center">
-    <button type="button" class="jpo_btn"><a href="#" target="__blank">Envoyer  →</a></button>
+  <div class="live_input">
+    <div class="input-group mb-3">
+      <input type="text" class="form-control live_questions_input" placeholder="Ecrivez votre question..." aria-label="Ecrivez votre question..." aria-describedby="button-addon2">
+    </div>
+    <div class="d-flex justify-content-center">
+      <button type="button" class="jpo_btn"><a href="#" target="__blank">Envoyer  →</a></button>
+    </div>
   </div>
 </div>
