responsive+installation Scrollmagic

--- a/web/app/themes/inside/assets/scss/components/button.scss
+++ b/web/app/themes/inside/assets/scss/components/button.scss
@@ -25,3 +25,13 @@
   text-decoration: none;
   font-size: 16px;
 }
+
+@media (max-width: 1000px) {
+  .jpo_btn a {
+    font-size: 14px;
+  }
+
+  .jpo_btn {
+    padding: 5px 10px;
+  }
+}
