--- a/web/app/themes/inside/assets/scss/components/header.scss
+++ b/web/app/themes/inside/assets/scss/components/header.scss
@@ -24,8 +24,8 @@
 .homepagetitle {
   margin-top: 50px;
   text-transform: uppercase;
-  font-size: 100px;
-  line-height: 160px;
+  font-size: 80px;
+  line-height: 100px;
 }
 
 .landing {
@@ -35,4 +35,11 @@
 header hr {
   border-color: black;
   opacity: 1;
+}
+
+@media (max-width: 1000px) {
+  .homepagetitle {
+    font-size: 45px;
+    line-height: 55px;
+  }
 }
