--- a/web/app/themes/inside/assets/scss/components/button.scss
+++ b/web/app/themes/inside/assets/scss/components/button.scss
@@ -27,11 +27,9 @@
 }
 
 @media (max-width: 1000px) {
-  .jpo_btn a {
-    font-size: 14px;
-  }
 
   .jpo_btn {
     padding: 5px 10px;
+    margin: 10px auto;
   }
 }
