--- a/web/app/themes/inside/views/sections/section-landing.twig
+++ b/web/app/themes/inside/views/sections/section-landing.twig
@@ -8,7 +8,7 @@
 			<br>Vous trouverez ici toutes les informations utiles sur chacunes de nos formations.
 		</p>
 		<div class="col-6"></div>
-		<div class="col-6 d-flex justify-content-end">
+		<div class="col-md-6 col-xs-12 d-flex justify-content-end">
 			<button type="button" class="jpo_btn"><a href="#" target="__blank">Vous êtes venus pour le live ? C'est par ici !  →</a></button>
 		</div>
 	</div>
