import bg page + responsive nhub likeaboss

--- a/web/app/themes/inside/assets/scss/components/navhub.scss
+++ b/web/app/themes/inside/assets/scss/components/navhub.scss
@@ -7,3 +7,9 @@
     justify-content: center;
     margin: 0 auto;
 }
+
+@media (max-width: 900px) {
+    .nhub_container {
+        height: 500px;
+    }
+}
