--- a/web/app/themes/inside/assets/scss/components/title-banner.scss
+++ b/web/app/themes/inside/assets/scss/components/title-banner.scss
@@ -12,7 +12,12 @@
     text-align: center;
 }
 
-.bigtitle {
+.containerfull.bigtitle {
+    width: 100%!important;
+    overflow: hidden;
+}
+
+.title.bigtitle {
     font-size: 250px;
     width: 200%;
     margin: 50px 0;
