--- a/web/app/themes/inside/views/sections/section-livefeed.twig
+++ b/web/app/themes/inside/views/sections/section-livefeed.twig
@@ -1,9 +1,9 @@
 {% include 'parts/title-banner.twig' with { title: "live" } %}
 <div class="container">
   <div class="row schedule">
-    <div class="col">Année préparatoire →  14h</div>
-    <div class="col">Interactive Media Designer →  15h</div>
-    <div class="col">Maturité Post-CFC MP2 →  16h</div>
+    <div class="col-12 col-md-4">Année préparatoire →  14h</div>
+    <div class="col-12 col-md-4">Interactive Media Designer →  15h</div>
+    <div class="col-12 col-md-4">Maturité Post-CFC MP2 →  16h</div>
   </div>
   <div class="ratio ratio-16x9">
     <iframe src="https://player.vimeo.com/video/369521302?h=64aa6feb2c" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
