--- a/web/app/themes/inside/assets/scss/components/inscriptions.scss
+++ b/web/app/themes/inside/assets/scss/components/inscriptions.scss
@@ -10,10 +10,11 @@
     font-size: 22px;
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 991px) and (min-width: 767px) {
     .cta_bloc {
         font-size: 16px;
         width: 100%;
+        max-height: 300px;
         padding: 12% 0 12% 2%;
     }
 
@@ -21,5 +22,25 @@
         display: flex;
         flex-direction: column;
         width: 100%;
+    }
+}
+
+@media (max-width: 767px) {
+    .cta_bloc {
+        margin: 30px 0;
+        padding: 16% 7% 0 12%;
+        background-size: 100% 250px;
+        max-height: 300px;
+        font-size: 13px;
+    }
+
+    .d-flex.cta {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .d-flex.cta button {
+        margin: 5px 0;
     }
 }
