--- a/web/app/themes/inside/views/sections/section-bigtitle.twig
+++ b/web/app/themes/inside/views/sections/section-bigtitle.twig
@@ -1,4 +1,4 @@
-<div class="containerfull">
-  <p class="bigtitle">Inside eikon →</p>
-  <p class="bigtitle">École professionnelle</p>
+<div class="containerfull bigtitle d-flex justify-content-center">
+  <p class="title bigtitle">Inside eikon →</p>
+  <p class="title bigtitle">École professionnelle</p>
 </div>
