--- a/web/app/themes/inside/assets/scss/components/footer.scss
+++ b/web/app/themes/inside/assets/scss/components/footer.scss
@@ -32,3 +32,9 @@
 .footer_logos {
   width: 70px;
 }
+
+@media (max-width: 991px) {
+  .d-flex.footer_cta_lg {
+    flex-direction: column!important;
+  }
+}
