--- a/web/app/themes/inside/assets/scss/components/videos.scss
+++ b/web/app/themes/inside/assets/scss/components/videos.scss
@@ -37,27 +37,57 @@
 }
 
 .container.vlog {
-    height: 550px;
-    width: 900px;
-    margin-top: 80px;
+    height: 500px;
+    width: 100%;
+    margin: 80px auto;
+    background-image: url(../img/backgrounds/rectangle_upleft_empty.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position-x: center;
 }
 
-.position-relative.vlog {
-    height: 550px;
-    width: 900px; 
+.dvlog {
+    width: 64%;
+    margin-top: -4%;
+    margin-left: -4.7%;
 }
 
 .ratio.ratio-16x9.vlog {
-    width: 748px;
     border: 4px solid black;
-    margin: 0;
 }
 
-.position-absolute.vlog {
-    top: -16px;
-    left: 4.4px;
+@media (max-width: 1399px) and (min-width: 1199px) {
+    .dvlog {
+        width: 75%;
+        margin-top: -5%;
+        margin-left: -6%;
+    }
 }
 
-.vlog_block img {
-    width: 802px;
+@media (max-width: 1199px) and (min-width: 991px) {
+    .dvlog {
+        width: 88%;
+        margin-top: -5.2%;
+        margin-left: -5.8%;
+    }
+}
+
+@media (max-width: 991px) and (min-width: 767px) {
+    .dvlog {
+        width: 96%;
+        margin-top: -6%;
+        margin-left: -5.7%;
+    }
+}
+
+@media (max-width: 767px) {
+    .container.vlog {
+        width: 100%;
+        background-size: 100%;
+    }
+    .dvlog {
+        width: 98%;
+        margin-top: -7.4%;
+        margin-left: -6.7%;
+    }
 }
