--- a/web/app/themes/inside/views/parts/footer.twig
+++ b/web/app/themes/inside/views/parts/footer.twig
@@ -2,28 +2,28 @@
   <div class="container">
     <div class="row">
       <div class="d-flex flex-row justify-content-between align-items-center">
-        <div class="col">
+        <div class="col-12 col-md-4">
           <div class="row">
             <div class="d-flex justify-content-center align-items-center footer_cta_lg">
-              <div class="col">
+              <div class="col-6 col-md-12">
                 <div class="d-flex justify-content-center footer_logos">
                   <img src="{{ theme.link }}/dist/img/logo_eikon.svg" alt="logo d'eikon.">
                 </div>
               </div>
-              <div class="col">
+              <div class="col-6 col-md-12">
                 <div class="d-flex justify-content-center footer_logos">
                   <img src="{{ theme.link }}/dist/img/logo_etatfr.svg" alt="logo de l'Etat de Fribourg.">
                 </div>
               </div>
+            </div>
           </div>
         </div>
+        <div class="col-12 col-md-4">
+          <div class="d-flex justify-content-center">
+            {{options.adresse}}
+          </div>
         </div>
-        <div class="col">
-        <div class="d-flex justify-content-center">
-          {{options.adresse}}
-        </div>
-        </div>
-        <div class="col">
+        <div class="col-12 col-md-4">
           <div class="footer_cta">
             <p>Suivez-nous sur :</p>
             <div class="footer_cta_sn">
