--- a/web/app/themes/inside/views/sections/section-landing.twig
+++ b/web/app/themes/inside/views/sections/section-landing.twig
@@ -4,12 +4,12 @@
 			<h1 class="homepagetitle">Bienvenue à <u>Inside.eikon</u> !</h1>
 		</div>
 		<p class="landing">
-			Cette année, nous avons décidé de changer notre conception des journées portes ouvertes d'eikon, c'est pourquoi nous les effectuons sur ce site. 
+			Cette année, nous avons décidé de changer notre conception des journées portes ouvertes d'eikon, c'est pourquoi nous les effectuons sur ce site.
 			<br>Vous trouverez ici toutes les informations utiles sur chacunes de nos formations.
 		</p>
 		<div class="col-6"></div>
 		<div class="col-md-6 col-xs-12 d-flex justify-content-end">
-			<button type="button" class="jpo_btn"><a href="#" target="__blank">Vous êtes venus pour le live ? C'est par ici !  →</a></button>
+			<a href="#" class="jpo_btn">Vous êtes venus pour le live ? C'est par ici !  →</a>
 		</div>
 	</div>
 </div>
