--- a/web/app/themes/inside/views/sections/section-livefeed.twig
+++ b/web/app/themes/inside/views/sections/section-livefeed.twig
@@ -8,7 +8,7 @@
   <div class="ratio ratio-16x9">
     <iframe src="https://player.vimeo.com/video/369521302?h=64aa6feb2c" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
   </div>
-  <div class="live_input">
+  <div class="live_input mb-5">
     {% if options.contact_form_shortcode %}
       <div>
         {{ function('do_shortcode', options.contact_form_shortcode) }}
