--- a/web/app/themes/inside/views/sections/section-navigationhub.twig
+++ b/web/app/themes/inside/views/sections/section-navigationhub.twig
@@ -1,8 +1,8 @@
 {% include 'parts/title-banner.twig' with { title: "Formations" } %}
 <div class="nhub_container">
     <div class="d-flex flex-column justify-content-center align-items-center">
-      <button type="button" class="jpo_btn"><a href="#" target="_blank">Année préparatoire</a></button>
-      <button type="button" class="jpo_btn"><a href="#" target="_blank">Interactive Media Designer</a></button>
-      <button type="button" class="jpo_btn"><a href="#" target="_blank">Maturité professionnelle artistique</a></button>
+      <a href="#" class="jpo_btn">Année préparatoire</a>
+      <a href="#" class="jpo_btn">Interactive Media Designer</a>
+      <a href="#" class="jpo_btn">Maturité professionnelle artistique</a>
   </div>
 </div>
