--- a/web/app/themes/inside/assets/scss/components/header.scss
+++ b/web/app/themes/inside/assets/scss/components/header.scss
@@ -4,17 +4,15 @@
 }
 
 .header_nav {
-  padding: 0 60px;
-}
+  li {
+    list-style: none;
+    color: black;
+  }
 
-.header_nav li {
-  list-style: none;
-}
-
-.header_nav li a,
-.header_nav a {
-  color: black;
-  text-decoration: none;
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
 }
 
 .container.landing {
@@ -35,6 +33,19 @@
 header hr {
   border-color: black;
   opacity: 1;
+}
+
+.main-menu {
+  display: flex;
+  justify-content: space-around;
+
+  .menu-item {
+    margin: 0 1rem;
+  }
+
+  .current-menu-item {
+    text-decoration: underline;
+  }
 }
 
 @media (max-width: 1000px) {
