--- a/web/app/themes/inside/views/single-project.twig
+++ b/web/app/themes/inside/views/single-project.twig
@@ -4,17 +4,9 @@
   <div class="container my-5">
     <div class="row">
       <div class="col-12">
-        {% if 'imd' in post.terms("years")[0].slug %}
-          <a href="interactive-media-designer">
-            Retour au projet des IMD
-          </a>
-        {% elseif 'mp2' in post.terms("years")[0].slug %}
-          <a href="/maturite-artistique-post-cfc">
-            Retour au projet des MP2
-          </a>
-        {% elseif 'prepa' in post.terms("years")[0].slug %}
-          <a href="/annee-preparatoire">
-            Retour au projet des Prépa
+        {% if archive_page_url %}
+          <a href="{{ archive_page_url }}">
+            ← {{ archive_page_name }}
           </a>
         {% endif %}
       </div>
