--- a/web/app/themes/inside/views/page.twig
+++ b/web/app/themes/inside/views/page.twig
@@ -1,57 +1,54 @@
 {% extends "base.twig" %}
 
 {% block content %}
-  <div class="container">
-    <h1>
-      {{post.title}}
-    </h1>
-    <div>
-      <div class="ratio ratio-16x9">
-        {{post.get_field('video')}}
-      </div>
-      {{post.content}}
-    </div>
-  </div>
-    {% if post.get_field('videomaton') %}
-      {% include 'parts/title-banner.twig' with { title: "Photo maton" } %}
-      <div class="container py-5">
-        <div class="row">
-          {% for item in post.get_field('videomaton') %}
-            <div class="col-6">
-              <div class="ratio ratio-1x1">
-                {{ item.video }}
-              </div>
-            </div>
-          {% endfor %}
+	<div class="container">
+		<h1>
+			{{post.title}}
+		</h1>
+		<div>
+      {% if post.get_field('video') %}
+        <div class="ratio ratio-16x9">
+          {{post.get_field('video')}}
+        </div>
+      {% endif %}
+
+			{{post.content}}
+		</div>
+	</div>
+	{% if post.get_field('videomaton') %}
+		{% include 'parts/title-banner.twig' with { title: "Photo maton" } %}
+		<div class="container py-5">
+      <div class="col-6 mx-auto">
+        <div class="ratio ratio-1x1">
+          {{post.get_field('video')}}
         </div>
       </div>
-    {% endif %}
-  </div>
+		</div>
+	{% endif %}
 
-  {% if projects %}
-    {% include 'parts/title-banner.twig' with { title: "Travaux" } %}
-    <div class="container py-5">
-      <div class="grid">
-        <div class="grid-sizer"></div>
-        {% for project in projects %}
-          <div class="grid-item">
-            <a class="project-teaser" href="{{ project.link }}">
-              <img src="{{ project.thumbnail.src("medium") }}" alt="{{ project.thumbnail.alt }}">
-              <div class="project-data">
-                <span>
-                  {{ project.terms('subjects')[0].name }}
-                </span>
-                -
-                <span>
-                  {{ project.title }}
-                </span>
-              </div>
-            </a>
-          </div>
-        {% endfor %}
-      </div>
-    </div>
-  {% endif %}
+	{% if projects %}
+		{% include 'parts/title-banner.twig' with { title: "Travaux" } %}
+		<div class="container py-5">
+			<div class="grid">
+				<div class="grid-sizer"></div>
+				{% for project in projects %}
+					<div class="grid-item">
+						<a class="project-teaser" href="{{ project.link }}">
+							<img src="{{ project.thumbnail.src("medium") }}" alt="{{ project.thumbnail.alt }}">
+							<div class="project-data">
+								<span>
+									{{ project.terms('subjects')[0].name }}
+								</span>
+								-
+								<span>
+									{{ project.title }}
+								</span>
+							</div>
+						</a>
+					</div>
+				{% endfor %}
+			</div>
+		</div>
+	{% endif %}
 
-  </div>
 {% endblock %}
