--- a/web/app/themes/inside/views/parts/footer.twig
+++ b/web/app/themes/inside/views/parts/footer.twig
@@ -1,4 +1,4 @@
-<footer class="site-footer">
+<footer class="site-footer" id="footer">
   <div class="container">
     <div class="row">
       <div class="d-flex flex-row justify-content-between align-items-center">
@@ -42,7 +42,7 @@
             <p>
               <a href="https://www.fr.ch/eikon/inscriptions-online" target="_blank">→ Inscription</a>
             </p>
-         </div> 
+         </div>
         </div>
       </div>
     </div>
