--- a/web/app/themes/inside/assets/scss/components/project-teaser.scss
+++ b/web/app/themes/inside/assets/scss/components/project-teaser.scss
@@ -5,6 +5,10 @@
   text-decoration: none;
   color: $black;
 
+  .project-data {
+    padding: 0.25rem 0 1rem;
+  }
+
   img {
     width: 100%;
     height: auto;
