--- a/web/app/themes/inside/views/page.twig
+++ b/web/app/themes/inside/views/page.twig
@@ -1,7 +1,7 @@
 {% extends "base.twig" %}
 
 {% block content %}
-	<div class="container">
+	<div class="container py-5">
 		<h1>
 			{{post.title}}
 		</h1>
