--- a/web/app/themes/inside/views/single-project.twig
+++ b/web/app/themes/inside/views/single-project.twig
@@ -3,9 +3,9 @@
 {% block content %}
   <div class="container my-5">
     <div class="row">
-      <div class="col-12">
+      <div class="col-12 mb-4">
         {% if archive_page_url %}
-          <a href="{{ archive_page_url }}">
+          <a href="{{ archive_page_url }}" class="jpo_btn">
             ← {{ archive_page_name }}
           </a>
         {% endif %}
